1. 添加了新的 go-langserver 服务。 2. vim-go 尝试添加失败。

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -19,6 +19,15 @@
             "command": "bash-language-server",
             "args": ["start"],
             "filetypes": ["sh"]
+        },
+        "golang": {
+            "command": "/home/aerian/go/bin/go-langserver",
+            "filetypes": ["go"],
+            "initializationOptions": {
+                "gocodeCompletionEnabled": true,
+                "diagnosticsEnabled": true,
+                "lintTool": "golint"
+            }
         }
     },
     "python.jediEnabled": false
