--- a/coc-settings.json
+++ b/coc-settings.json
@@ -28,7 +28,80 @@
                 "diagnosticsEnabled": true,
                 "lintTool": "golint"
             }
+        },
+        "vala": {
+            "command": "vala-language-server",
+            "filetypes": ["vala", "genie"]
         }
     },
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "explorer.keyMappings": {
+
+        "gk": "expandablePrev",
+        "gj": "expandableNext",
+
+        "*": "toggleSelection",
+        "<tab>": "actionMenu",
+
+        "h": "collapse",
+        "l": ["expandable?", "expand", "open"],
+        "J": ["toggleSelection", "nodeNext"],
+        "K": ["toggleSelection", "nodePrev"],
+        "gl": "expandRecursive",
+        "gh": "collapseRecursive",
+        "<2-LeftMouse>": [
+            "expandable?",
+            ["expanded?", "collapse", "expand"],
+            "open"
+        ],
+        "o": ["expanded?", "collapse", "expand"],
+        "<cr>": ["expandable?", "cd", "open"],
+        "e": "open",
+        "s": "open:split",
+        "S": "open:split:plain",
+        "E": "open:vsplit",
+        "t": "open:tab",
+        "<bs>": "gotoParent",
+        "gp": "preview:labeling",
+
+        "y": "copyFilepath",
+        "Y": "copyFilename",
+        "c": "copyFile",
+        "m": "cutFile",
+        "p": "pasteFile",
+        "d": "delete",
+        "D": "deleteForever",
+
+        "a": "addFile",
+        "A": "addDirectory",
+        "r": "rename",
+
+        "i": "toggleHidden",
+        "R": "refresh",
+
+        "?": "help",
+        "q": "quit",
+        "<esc>": "esc",
+        "X": "systemExecute",
+        "gd": "listDrive",
+
+        "f": "search",
+        "F": "searchRecursive",
+
+        "gf": "gotoSource:file",
+        "gb": "gotoSource:buffer",
+
+        "[[": "sourcePrev",
+        "]]": "sourceNext",
+
+        "[d": "diagnosticPrev",
+        "]d": "diagnosticNext",
+
+        "[c": "gitPrev",
+        "]c": "gitNext",
+        "<<": "gitStage",
+        ">>": "gitUnstage"
+    },
+    "explorer.icon.enableVimDevicons": true,
+    "html.autoClosingTags": true
 }
