--- a/coc-settings.json
+++ b/coc-settings.json
@@ -73,7 +73,7 @@
         "gj": "expandableNext",
 
         "*": "toggleSelection",
-        "<tab>": "actionMenu",
+        "M": "actionMenu",
 
         "h": "collapse",
         "l": ["expandable?", "expand", "open"],
@@ -88,6 +88,7 @@
         ],
         "o": ["expanded?", "collapse", "expand"],
         "<cr>": ["expandable?", "cd", "open"],
+        "<tab>": ["expanded?", "collapse", "expand"],
         "e": "open",
         "s": "open:split",
         "S": "open:split:plain",
