:zap: make something better

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -152,7 +152,13 @@
     "explorer.icon.source": "vim-devicons",
     "explorer.git.enable": true,
     "explorer.file.showHiddenFiles": true,
-    "explorer.previewAction.onHover": false,
+    "explorer.previewAction.onHover": true,
+    "explorer.git.icon.status.modified": "✹",
+    "explorer.git.icon.status.added": "✚",
+    "explorer.git.icon.status.untracked": "✭",
+    "explorer.git.icon.status.renamed": "➜",
+    "explorer.git.icon.status.unmerged": "═",
+    "explorer.git.icon.status.deleted": "✖",
     "tsserver.npm": "/usr/bin/tsserver",
     "tsserver.disableAutomaticTypeAcquisition": false,
     "html.autoClosingTags": true,
