--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+    "suggest.timeout": 0,
     "diagnostic.enable": true,
     "diagnostic.checkCurrentLine": true,
     "diagnostic.errorSign": "✘",
