fix: disable global take over mode

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -186,6 +186,5 @@
     "coc.preferences.formatOnSaveFiletypes": ["css", "markdown"],
     "omnisharp.path": "/usr/bin/omnisharp",
     "translator.proxy": "socks://127.0.0.1:1080",
-    "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
-    "volar.takeOverMode.enabled": true
+    "rust-analyzer.server.path": "/usr/bin/rust-analyzer"
 }
