--- a/coc-settings.json
+++ b/coc-settings.json
@@ -108,7 +108,7 @@
         "default": "\uf29c" //  question mark in circle
     },
     "suggest.noselect": true,
-    "suggest.enablePreselect": true,
+    "suggest.enablePreselect": false,
     "explorer.keyMappings.global": {
         "gk": "expandablePrev",
         "gj": "expandableNext",
@@ -195,7 +195,7 @@
     "explorer.git.icon.status.deleted": "✖",
     "tsserver.npm": "/usr/bin/tsserver",
     "tsserver.disableAutomaticTypeAcquisition": false,
-    "html.autoClosingTags": true,
+    "html.autoClosingTags": false,
     "svelte.enable-ts-plugin": true,
     "python.linting.enabled": true,
     "git.changedSign.text": "▌",
@@ -225,5 +225,6 @@
     "translator.proxy": "socks://127.0.0.1:1080",
     "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
     "vimlsp.indexes.runtimepath": true,
-    "vimlsp.suggest.fromRuntimepath": true
+    "vimlsp.suggest.fromRuntimepath": true,
+    "colors.filetypes": ["vue", "javascript", "typescript", "lua", "rust", "php", "json", "html", "css", "less", "scss"]
 }
