perf: improve user experience

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -111,7 +111,7 @@
         "border": true,
         "shadow": true
     },
-    "suggest.enablePreselect": true,
+    "suggest.enablePreselect": false,
     "explorer.keyMappings.global": {
         "gk": "expandablePrev",
         "gj": "expandableNext",
