--- a/coc-settings.json
+++ b/coc-settings.json
@@ -230,5 +230,7 @@
     "vimlsp.indexes.runtimepath": true,
     "vimlsp.suggest.fromRuntimepath": true,
     "colors.filetypes": ["vue", "javascript", "typescript", "lua", "rust", "php", "json", "html", "css", "less", "scss", "c", "cpp"],
-    "highlight.disableLanguages": ["org"]
+    "highlight.disableLanguages": ["org"],
+    "stylua.styluaPath": "/usr/bin/stylua",
+    "stylua.configPath": "/home/aerian/.vim/stylua.toml"
 }
