--- a/coc-settings.json
+++ b/coc-settings.json
@@ -229,7 +229,7 @@
     "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
     "vimlsp.indexes.runtimepath": true,
     "vimlsp.suggest.fromRuntimepath": true,
-    "colors.filetypes": ["vue", "javascript", "typescript", "lua", "rust", "php", "json", "html", "css", "less", "scss", "c", "cpp"],
+    "colors.filetypes": ["vue", "html", "javascript", "typescript", "lua", "rust", "php", "json", "css", "less", "scss", "c", "cpp"],
     "highlight.disableLanguages": ["org"],
     "stylua.styluaPath": "/usr/bin/stylua",
     "stylua.configPath": "/home/aerian/.vim/stylua.toml"
