perf(coc-settings): limit word source number

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -228,5 +228,5 @@
     "highlight.disableLanguages": ["org"],
     "stylua.styluaPath": "/usr/bin/stylua",
     "stylua.configPath": "/home/aerian/.vim/stylua.toml",
-    "coc.source.word.priority": -10
+    "coc.source.word.max": 4
 }
