--- a/coc-settings.json
+++ b/coc-settings.json
@@ -79,10 +79,17 @@
             "rootPatterns": ["*.cabal", "stack.yaml", "cabal.project", "package.yaml", "hie.yaml"],
             "filetypes": ["haskell", "lhaskell"]
         },
-        "fortran": {
-            "command": "fortls",
-            "filetypes": ["fortran"],
-            "rootPatterns": [".fortls", ".git/"]
+        "tagls": {
+            "command": "python3",
+            "args": ["-m", "tagls"],
+            "filetypes": [
+                "vim",
+                "fortran"
+            ],
+            "initializationOptions": {
+                "cache_dir": "/tmp/gtags"
+            },
+            "settings": {}
         }
     },
     "suggest.completionItemKindLabels": {
