perf(coc-settings.json): 优化 coc 设置

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -198,7 +198,6 @@
     "snippets.ultisnips.directories": ["$runtimepath/UltiSnips", "UltiSnips"],
     "volar.autoClosingTags": true,
     "volar.autoCompleteRefs": true,
-    "volar.diagnostics.tsLocale": "zh-cn",
     "explorer.icon.enableNerdfont": true,
     "explorer.icon.source": "vim-devicons",
     "explorer.git.enable": true,
@@ -210,6 +209,7 @@
     "explorer.git.icon.status.renamed": "➜",
     "explorer.git.icon.status.unmerged": "═",
     "explorer.git.icon.status.deleted": "✖",
+    "explorer.file.reveal.auto": false,
     "tsserver.npm": "/usr/bin/tsserver",
     "tsserver.disableAutomaticTypeAcquisition": false,
     "html.autoClosingTags": false,
@@ -234,18 +234,17 @@
     "coc.source.buffer.shortcut": "B",
     "coc.source.buffer.priority": 87,
     "coc.source.buffer.ignoreGitignore": false,
-    "codeLens.enable": false,
+    "codeLens.enable": true,
     "codeLens.separator": "▸",
     "intelephense.progress.enable": false,
-    "coc.preferences.formatOnSaveFiletypes": ["css", "markdown"],
     "omnisharp.path": "/usr/bin/omnisharp",
     "translator.proxy": "socks://127.0.0.1:1080",
     "rust-analyzer.server.path": "/usr/bin/rust-analyzer",
     "vimlsp.indexes.runtimepath": true,
     "vimlsp.suggest.fromRuntimepath": true,
-    "colors.filetypes": ["html", "javascript", "typescript", "lua", "rust", "php", "json", "css", "less", "scss", "c", "cpp"],
     "highlight.disableLanguages": ["org"],
     "stylua.styluaPath": "/usr/bin/stylua",
     "stylua.configPath": "/home/aerian/.vim/stylua.toml",
-    "coc.source.word.max": 4
+    "coc.source.word.max": 4,
+    "snippets.ultisnips.pythonPrompt": false
 }
