feat: add format configuration

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -245,7 +245,7 @@
     "highlight.disableLanguages": ["org"],
     "stylua.styluaPath": "/usr/bin/stylua",
     "stylua.configPath": "/home/aerian/.vim/stylua.toml",
-    "coc.source.word.max": 4,
+    "eslint.format.enable": true,
     "snippets.ultisnips.pythonPrompt": false,
     "emmet.includeLanguages": {
         "vue-html": "html",
