perfect(coc): enable semanticTokens

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -193,6 +193,7 @@
         "<<": "gitStage",
         ">>": "gitUnstage"
     },
+    "semanticTokens.enable": true,
     "eslint.packageManager": "yarn",
     "eslint.quiet": true,
     "snippets.ultisnips.directories": ["$runtimepath/UltiSnips", "UltiSnips"],
