--- a/coc-settings.json
+++ b/coc-settings.json
@@ -58,6 +58,20 @@
                 "hie.yaml"
             ],
             "filetypes": ["haskell", "lhaskell"]
+        },
+        "purescript": {
+            "command": "purescript-language-server",
+            "args": ["--stdio"],
+            "filetypes": ["purescript"],
+            "trace.server": "off",
+            "rootPatterns": ["bower.json", "psc-package.json", "spago.dhall"],
+            "settings": {
+                "purescript": {
+                    "addSpagoSources": true,
+                    "addNpmPath": true, // Set to true if using a local purty install for formatting
+                    "formatter": "purs-tidy"
+                }
+            }
         }
     },
     "suggest.completionItemKindLabels": {
